--- a/index.html
+++ b/index.html
@@ -5,85 +5,31 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Readify 24/7</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    h1 { font-size: 2.5rem; margin-bottom: 20px; color: #2563eb; }
+    .start-btn {
+      display: inline-block;
+      padding: 16px 28px;
+      font-size: 18px;
+      border-radius: 10px;
+      background: #2563eb;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .start-btn:hover { background: #1e40af; }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="brand">
-      <h1>Readify 24/7</h1>
-    </div>
-
-    <nav class="site-nav">
-      <a href="index.html">Home</a>
-      <a href="#">Reading</a>
-      <a href="#">Quiz</a>
-      <a href="#">Vocabulary</a>
-      <a href="#">About</a>
-    </nav>
-  </header>
-
-  <main class="container">
-    <!-- Filter pills -->
-    <section class="filters" aria-label="Filter stories">
-      <button class="filter-btn active" data-level="All">All</button>
-      <button class="filter-btn" data-level="Beginner">Beginner</button>
-      <button class="filter-btn" data-level="Intermediate">Intermediate</button>
-      <button class="filter-btn" data-level="Advanced">Advanced</button>
-    </section>
-
-    <!-- Cards grid -->
-    <section class="cards-grid" id="cardsGrid">
-      <!-- Card: The Fox and The Grapes -->
-      <article class="card" data-level="Beginner" data-slug="fox">
-        <div class="card-media">
-          <img src="https://placehold.co/1200x400?text=The+Fox+and+The+Grapes" alt="The Fox and The Grapes cover">
-        </div>
-        <div class="card-body">
-          <span class="tag">Beginner</span>
-          <h2 class="card-title">The Fox and The Grapes</h2>
-          <p class="card-desc">A short fable about a fox who wanted some grapes.</p>
-          <div style="display:flex;gap:10px;flex-direction:column;">
-            <a class="btn start-btn" href="reading-fox.html">Start Reading</a>
-            <a class="btn" href="quiz-fox.html" style="background:#fff;color:var(--blue);border:1px solid var(--blue);font-weight:700;">Take Quiz</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Card: The Ant and The Grasshopper -->
-      <article class="card" data-level="Beginner" data-slug="ant">
-        <div class="card-media">
-          <img src="https://placehold.co/1200x400?text=The+Ant+and+The+Grasshopper" alt="The Ant and The Grasshopper cover">
-        </div>
-        <div class="card-body">
-          <span class="tag">Beginner</span>
-          <h2 class="card-title">The Ant and The Grasshopper</h2>
-          <p class="card-desc">A classic story about hard work and laziness.</p>
-          <div style="display:flex;gap:10px;flex-direction:column;">
-            <a class="btn start-btn" href="reading-ant.html">Start Reading</a>
-            <a class="btn" href="quiz-ant.html" style="background:#fff;color:var(--blue);border:1px solid var(--blue);font-weight:700;">Take Quiz</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Card: The Lion and The Mouse -->
-      <article class="card" data-level="Intermediate" data-slug="lion">
-        <div class="card-media">
-          <img src="https://placehold.co/1200x400?text=The+Lion+and+The+Mouse" alt="The Lion and The Mouse cover">
-        </div>
-        <div class="card-body">
-          <span class="tag">Intermediate</span>
-          <h2 class="card-title">The Lion and The Mouse</h2>
-          <p class="card-desc">A story that shows how small acts of kindness matter.</p>
-          <div style="display:flex;gap:10px;flex-direction:column;">
-            <a class="btn start-btn" href="reading-lion.html">Start Reading</a>
-            <a class="btn" href="quiz-lion.html" style="background:#fff;color:var(--blue);border:1px solid var(--blue);font-weight:700;">Take Quiz</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Tambah card lain di bawah (copy block article dan ganti data-slug, href, gambar, dsb.) -->
-    </section>
-  </main>
-
-  <script src="script.js"></script>
+  <h1>Welcome to Readify 24/7</h1>
+  <p>Improve your English with stories, quizzes, and vocabulary.</p>
+  <a class="start-btn" href="reading-list.html">Start Reading</a>
 </body>
 </html>
