--- a/reading-list.html
+++ b/reading-list.html
@@ -17,8 +17,18 @@
   </header>
 
   <main class="container">
+
+    <!-- Filter pills -->
+    <section class="filters">
+      <button class="filter-btn active" data-level="All">All</button>
+      <button class="filter-btn" data-level="Beginner">Beginner</button>
+      <button class="filter-btn" data-level="Intermediate">Intermediate</button>
+      <button class="filter-btn" data-level="Advanced">Advanced</button>
+    </section>
+
+    <!-- Cards grid -->
     <section class="cards-grid">
-      
+
       <!-- Fox -->
       <article class="card" data-level="Beginner">
         <div class="card-media">
@@ -60,5 +70,8 @@
 
     </section>
   </main>
+
+  <!-- Script untuk filter -->
+  <script src="script.js"></script>
 </body>
 </html>
