--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="hero">
     <div class="hero-content">
       <h2>Welcome to Readify 24/7</h2>
-      <p>Improve your English with stories, quizzes, and vocabulary.</p>
+      <p>Improve your English with stories and quizzes</p>
       <a href="reading-list.html" class="btn hero-btn">Start Reading</a>
     </div>
   </section>
