--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <div class="hero-content">
       <h2>Welcome to Readify 24/7</h2>
       <p>Improve your English with stories and quizzes</p>
-      <a href="reading-list.html" class="btn hero-btn">Start Reading</a>
     </div>
   </section>
 
@@ -35,7 +34,7 @@
       <p>Enjoy short stories to practice reading comprehension.</p>
     </a>
 
-    <a href="quiz.html" class="feature-card">
+    <a href="quiz-list.html" class="feature-card">
       <span class="icon">📝</span>
       <h3>Quiz</h3>
       <p>Test your knowledge with interactive quizzes.</p>
